    player being sent to their home nearest the default spawn on world "world".
  - direct Essentials command integration, meaning HSP and essentials work fine together out of the box. No more need to remap
    Bukkit aliases to get around Essentials bully command system.
  - new strategies: spawnNearestWithPrefix, modeEffect
  - Ticket #190: addition of config option to disable DB lower() calls

v1.7.6 - May 5, 2013
* built for CraftBukkit v1.5.2 ONLY
* support for Multiverse integration with Multiverse 2.5

v1.7.5 - Apr 4, 2013
* fixed NPE bug with /homeinvite when trying to send an invite to a home you don't own
* addition of "/hlo dd" admin command to look for any home playerName case dups. For example, if a home "foo" exists for both player "Julie" and "julie", this will delete the oldest of the two. In general this is only caused by servers that have run in offline mode and allowed players to create homes that aren't tied to valid minecraft IDs. Backup your database before running this command!
* addition of "/hlo lc" admin command to convert all player names for homes in the database to lowercase. In practice this isn't all that useful right now since HSP currently ignores case when searching player homes, but this might be combined with a future config option to enforce lowercase names instead of proper case for admins that prefer it. Backup your database before running this command!
* Ticket #175: fix for /home NPE related to using strategies that produce no result
* addition of "core.recordLastLocation" which can be used to disable Last Location logging
* ignore case for name safety check in /homedelete and /homerename, only matters for offline servers
* Ticket #183: Fix for disabling /sethome when falling beneath the world

v1.7.4 - Jan 31, 2013
* compatible with CraftBukkit v1.4.7 ONLY
* Ticket #168 - No command classes found (conflict with Honeypot plugin)
* Ticket #162 - added homeMinecraftBedSpawn