@@ -1,72 +1,20 @@
-/**
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- *
- * Copyright (c) 2013 Andune (andune.alleria@gmail.com)
- * All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
- * 1. Redistributions of source code must retain the above copyright
- * notice, this list of conditions and the following disclaimer.
- * 2. Redistributions in binary form must reproduce the above copyright
- * notice, this list of conditions and the following disclaimer
- * in the documentation and/or other materials provided with the
- * distribution.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- */
-/**
- * 
- */
 package com.andune.minecraft.hsp;
 
-import java.util.List;
-
-import javax.inject.Inject;
-import javax.inject.Singleton;
-
-
-import com.andune.minecraft.commonlib.Logger;
-import com.andune.minecraft.commonlib.LoggerFactory;
 import com.andune.minecraft.commonlib.server.api.CommandSender;
-import com.andune.minecraft.commonlib.server.api.PermissionSystem;
 import com.andune.minecraft.commonlib.server.api.Player;
 import com.andune.minecraft.hsp.command.Command;
-import com.andune.minecraft.hsp.config.ConfigCore;
 
-
-/** All HSP Permissions are defined here.
+/**
+ * This interface exists so that a proxy object can easily be created for
+ * instances where we want to do something special with permission checks,
+ * such as make them all true when a command block is executing something
+ * on behalf of the player.
  * 
  * @author andune
  *
  */
-@Singleton
-public class Permissions {
-    private static final Logger log = LoggerFactory.getLogger(Permissions.class);
-    /**
-     * The base permission prefix - all HSP permissions start with this prefix. 
-     */
-    private static final String PERM_PREFIX = "hsp.";
-    
-    private final PermissionSystem permSystem;
-    private final ConfigCore configCore;
-    
-    @Inject
-    public Permissions(PermissionSystem permSystem, ConfigCore configCore) {
-        this.permSystem = permSystem;
-        this.configCore = configCore;
-    }
-    
+public interface Permissions {
+
     /**
      * Determine if a sender has a given permission.
      * 
@@ -81,36 +29,10 @@ public class Permissions {
      * @param perm
      * @return
      */
-    public boolean hasPermission(CommandSender sender, String perm) {
-        boolean result = permSystem.has(sender, perm);
-        log.debug("hasPermission: sender={}, perm={}, result={}", sender, perm, result);
+    public boolean hasPermission(CommandSender sender, String perm);
 
-        // support legacy HSP "defaultPermissions" setting
-        if( !result ) {
-            List<String> defaultPerms = configCore.getDefaultPermissions();
-            if( defaultPerms != null && defaultPerms.contains(perm) )
-                result = true;
-        }
+    public boolean hasCommandPermission(CommandSender sender, String command);
 
-        return result;
-    }
-
-    /**
-     * Prepend the PREFIX and check if a player has a given permission node. 
-     * 
-     * @param sender the player to check
-     * @param perm the permission to check (PREFIX is automatically prepended)
-     * 
-     * @return true if the player has the permission
-     */
-    private boolean permCheck(CommandSender sender, String perm) {
-        return hasPermission(sender, PERM_PREFIX+ perm);
-    }
-
-    public boolean hasCommandPermission(CommandSender sender, String command) {
-        return permCheck(sender,  "command." + command);
-    }
-    
     /**
      * Check for custom command permission first, if there is none, check the
      * default command permission.
@@ -119,28 +41,18 @@ public class Permissions {
      * @param command
      * @return true if the sender has permission, false if not
      */
-    public boolean hasCommandPermission(CommandSender sender, Command command) {
-        String customPerm = command.getCommandPermissionNode();
-        if( customPerm != null )
-            return permCheck(sender, customPerm);
-        else 
-            return hasCommandPermission(sender,  command.getCommandName());
-    }
-    
-    public boolean hasSetHomeNamed(Player player) {
-        return permCheck(player, "command.sethome.named");
-    }
-    
+    public boolean hasCommandPermission(CommandSender sender, Command command);
+
+    public boolean hasSetHomeNamed(Player player);
+
     /**
      * Determine if the player should have HSP admin privileges.
      * 
      * @param player
      * @return
      */
-    public boolean isAdmin(CommandSender sender) {
-        return permCheck(sender, "admin");
-    }
-    
+    public boolean isAdmin(CommandSender sender);
+
     /**
      * Determine if the player should be exempt from a given warmup.
      * 
@@ -148,10 +60,8 @@ public class Permissions {
      * @param warmup
      * @return
      */
-    public boolean isWarmupExempt(Player player, String warmup) {
-        return permCheck(player, "WarmupExempt."+warmup);
-    }
-    
+    public boolean isWarmupExempt(Player player, String warmup);
+
     /**
      * Determine if the player should be exempt from a given cooldown.
      * 
@@ -159,9 +69,7 @@ public class Permissions {
      * @param cooldown
      * @return
      */
-    public boolean isCooldownExempt(Player player, String cooldown) {
-        return permCheck(player, "CooldownExempt."+cooldown);
-    }
+    public boolean isCooldownExempt(Player player, String cooldown);
 
     /**
      * Determine if the player should be exempt from a given cost.
@@ -170,9 +78,7 @@ public class Permissions {
      * @param cooldown
      * @return
      */
-    public boolean isCostExempt(Player player, String cost) {
-        return permCheck(player, "CostExempt."+cost);
-    }
+    public boolean isCostExempt(Player player, String cost);
 
     /**
      * Determine if a player has permission to specify an argument to 
@@ -181,10 +87,8 @@ public class Permissions {
      * @param player
      * @return
      */
-    public boolean hasOtherGroupSpawnPermission(Player player) {
-        return hasCommandPermission(player, "groupspawn.named");
-    }
-    
+    public boolean hasOtherGroupSpawnPermission(Player player);
+
     /**
      * Determine if the player has permission to go to named spawns, such
      * as "/spawn spawn3".
@@ -193,13 +97,8 @@ public class Permissions {
      * @param name optional arg, if set, is appended to the permission check
      * @return
      */
-    public boolean hasSpawnNamed(Player player, String name) {
-        if( name != null )
-            return hasCommandPermission(player, "spawn.named."+name);
-        else
-            return hasCommandPermission(player, "spawn.named");
-    }
-    
+    public boolean hasSpawnNamed(Player player, String name);
+
     /**
      * Determine if the player has permission to send out permament
      * home invites.
@@ -207,29 +106,19 @@ public class Permissions {
      * @param player
      * @return
      */
-    public boolean hasPermanentHomeInvite(Player player) {
-        return hasCommandPermission(player, "homeinvite.permanent");
-    }
-    
-    public boolean hasHomeInviteOtherWorld(Player player) {
-        return hasCommandPermission(player, "homeinvitetp.otherworld");
-    }
-    
-    public boolean hasHomeOtherWorld(Player player) {
-        return hasCommandPermission(player, "home.otherworld");
-    }
-    
-    public boolean hasHomeNamed(Player player) {
-        return hasCommandPermission(player, "home.named");
-    }
-    
+    public boolean hasPermanentHomeInvite(Player player);
+
+    public boolean hasHomeInviteOtherWorld(Player player);
+
+    public boolean hasHomeOtherWorld(Player player);
+
+    public boolean hasHomeNamed(Player player);
+
     /**
      * Determine if player has permission to set bed homes.
      * 
      * @param player
      * @return
      */
-    public boolean hasBedSetHome(Player player) {
-        return permCheck(player, "home.bedsethome");
-    }
+    public boolean hasBedSetHome(Player player);
 }
